--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/localstorage.service.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="views/menu/menu.controller.js"></script>
+    <script src="js/main.controller.js"></script>
+    <script src="views/account/login.controller.js"></script>
+    <script src="views/home/home.controller.js"></script>
   </head>
 
   <body ng-app="starter">
