--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="views/home/home.controller.js"></script>
     <script src="views/category/category-list.controller.js"></script>
     <script src="views/category/category-add.controller.js"></script>
+    <script src="views/shop/shop.controller.js"></script>
   </head>
 
   <body ng-app="starter">
