--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="views/category/category-list.controller.js"></script>
     <script src="views/category/category-add.controller.js"></script>
     <script src="views/shop/shop.controller.js"></script>
+    <script src="views/shop/shop-edit.controller.js"></script>
   </head>
 
   <body ng-app="starter">
