菜单设置和图标

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="views/category/category-add.controller.js"></script>
     <script src="views/shop/shop.controller.js"></script>
     <script src="views/shop/shop-edit.controller.js"></script>
+    <script src="views/setting/setting.controller.js"></script>
   </head>
 
   <body ng-app="starter">
