--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
     <script src="views/shop/shop.controller.js"></script>
     <script src="views/shop/shop-edit.controller.js"></script>
     <script src="views/setting/setting.controller.js"></script>
+    <script src="views/account/change-password.controller.js"></script>
   </head>
 
   <body ng-app="starter">
