--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/localstorage.service.js"></script>
+    <script src="views/category/category.service.js"></script>
     <script src="js/controllers.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="js/main.controller.js"></script>
@@ -45,6 +46,7 @@
     <script src="views/shop/shop-edit.controller.js"></script>
     <script src="views/setting/setting.controller.js"></script>
     <script src="views/account/change-password.controller.js"></script>
+    <script src="views/product/product-add.controller.js"></script>
   </head>
 
   <body ng-app="starter">
