完成添加商品、商品管理、下拉刷新

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
     <script src="views/setting/setting.controller.js"></script>
     <script src="views/account/change-password.controller.js"></script>
     <script src="views/product/product-add.controller.js"></script>
+    <script src="views/product/product-list.controller.js"></script>
   </head>
 
   <body ng-app="starter">
