--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,9 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -37,6 +38,9 @@
     <script src="js/localstorage.service.js"></script>
     <script src="views/category/category.service.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.module.js"></script>
+    <script src="js/company.directive.js"></script>
+    <script src="js/expander.directive.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="js/main.controller.js"></script>
     <script src="views/account/login.controller.js"></script>
