客户端验证

--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,12 @@
     <script src="js/services.js"></script>
     <script src="js/localstorage.service.js"></script>
     <script src="views/category/category.service.js"></script>
+    <script src="js/popup.service.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.module.js"></script>
     <script src="js/company.directive.js"></script>
     <script src="js/expander.directive.js"></script>
+    <script src="js/equalto.directive.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="js/main.controller.js"></script>
     <script src="views/account/login.controller.js"></script>
