客户端验证

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/company.directive.js"></script>
     <script src="js/expander.directive.js"></script>
     <script src="js/equalto.directive.js"></script>
+    <script src="js/phone.directives.js"></script>
     <script src="views/menu/menu.controller.js"></script>
     <script src="js/main.controller.js"></script>
     <script src="views/account/login.controller.js"></script>
